
This speeds up copying large files a lot while saving the disk space.

** 'seek' can now navigate holes in sparse files

On systems that support it, such as GNU/Linux, the new SEEK_DATA and
SEEK_HOLE values can now be passed to the 'seek' procedure to change
file offset to the next piece of data or to the next hole in sparse
files.  See "Random Access" in the manual for details.

* Bug fixes

** Fix incorrect comparison between exact and inexact numbers
   (<https://debbugs.gnu.org/69725>)
** (ice-9 suspendable-ports) incorrect UTF-8 decoding
   (<https://bugs.gnu.org/62290>)
** Fix invalid use of 'posix_spawn' on non-glibc systems
   (<https://bugs.gnu.org/61095>)
** Adjust 'spawn' test for GNU/Hurd
   (<https://bugs.gnu.org/62501>)
** Fix 'system*' with non-file input/output/error port
   (<https://bugs.gnu.org/63024>)
** 'spawn' errors out instead of crashing when passed non-file ports
   (<https://bugs.gnu.org/61073>)
** Support signal handling child processes after 'primitive-fork'
   (<https://bugs.gnu.org/68087>)
** Fix possible deadlock in 'sigaction' (aka. 'scm_sigaction_for_thread')
   (<https://bugs.gnu.org/64666>)
** Avoid module resolution in 'call-with-new-thread', which could deadlock
   (<https://bugs.gnu.org/62691>)
** Fix deadlock in 'join-thread' when timeout is hit
   (<https://bugs.gnu.org/55356>)
** 'read-u8' in (scheme base) now defaults to (current-input-port)
   (<https://bugs.gnu.org/62690>)
** Second argument of 'unread-string' is now optional, as previously documented
   (<https://bugs.gnu.org/67063>)
** 'ftw' now correctly deals with directory permissions
   (<https://bugs.gnu.org/55344>)
** 'make-custom-port' now honors its #:conversion-strategy argument
** 'eval-string' respects #:column (previously it was set to the #:line)
** 'string->date' now allows a colon in the ISO 8601 zone offset
** 'system*' no longer fiddles with the process' signal handlers
   (<https://bugs.gnu.org/70144>)