@@ -37,6 +37,10 @@ SEEK_HOLE values can now be passed to the 'seek' procedure to change
 file offset to the next piece of data or to the next hole in sparse
 files.  See "Random Access" in the manual for details.
 
+** ((scm foreign-object) make-foreign-object-type) now supports #:super
+
+A list of superclasses can now be provided via #:super.
+
 * Bug fixes
 
 ** Fix incorrect comparison between exact and inexact numbers
